[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatenv"
dynamic = ["version"]
description = "ChatArch typed environment profile manager"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "rexwzh", email = "1073853456@qq.com"}]
keywords = ["chatenv", "chatarch", "env"]
dependencies = [
    "chatstyle>=0.1.0,<0.2.0",
    "click>=8.4.2,<9.0",
    "python-dotenv>=1.2.2,<2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "chatenv.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
chatenv = "chatenv.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-redirects>=1.2",
    "mike>=2.1",
]
